fix: scrollbar color in light, closes #185

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -21,14 +21,14 @@ body {
 *::-webkit-scrollbar-thumb,
 *::-webkit-scrollbar-thumb:hover {
   background-color: transparent;
-  border: 3px solid theme(colors.base-100);
+  border: 3px solid theme(colors.zinc.200/20);
   border-radius: 5px;
 }
 
 *::-webkit-scrollbar {
   width: 5px !important;
   height: 5px !important;
-  background: theme(colors.base-100);
+  background: theme(colors.zinc.100);
 }
 
 *::-webkit-scrollbar-thumb {
@@ -40,5 +40,5 @@ body {
 }
 
 *::-webkit-scrollbar-corner {
-  background: theme(colors.base-100);
+  background: theme(colors.zinc.100);
 }
