--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -25,8 +25,8 @@ html {
 }
 
 ::selection {
-  background-color: var(--theme-color);
-  color: theme(colors.always.white);
+  background-color: var(--theme-color) !important;
+  color: theme(colors.always.white) !important;
   text-shadow: none;
 }
 
